--- a/Test-Task/my_app/src/components/Cart/FillProducts/FillProducts.module.css
+++ b/Test-Task/my_app/src/components/Cart/FillProducts/FillProducts.module.css
@@ -71,7 +71,6 @@
 
 
 .item_name_header{
-    /* width: 100%; */
     height: 100%;
     font-family: 'Raleway';
     display: flex;
@@ -102,7 +101,7 @@
 
 .item_price{
     width: 100%;
-    height: 15%;
+    height: 14%;
 }
 
 
@@ -136,15 +135,15 @@
     justify-content: flex-start;
     align-items: flex-end;
     font-weight: bold;
-    font-size: 1.25rem; /* 20px */
-    line-height: 1.75rem; /* 28px */
+    font-size: 1.25rem; 
+    line-height: 1.75rem; 
     padding-bottom: 5px;
 }
 
 .quantity_header{
    font-family: 'Raleway';
    font-size: 25px;
-   line-height: 1rem; /* 16px */
+   line-height: 1rem; 
    margin-right: 4px;
    font-weight: 600;
 }
@@ -203,14 +202,14 @@
     justify-content: flex-start;
     align-items: flex-end;
     font-weight: 600;
-    font-size: 1.25rem; /* 20px */
-    line-height: 1.75rem; /* 28px */
+    font-size: 1.25rem; 
+    line-height: 1.75rem; 
 }
 
 
 .color_selection{
     width: 100%;
-    height: 10%;
+    height: 11%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -226,16 +225,16 @@
 .color_button_first{
     height: 100%;
     width: 47.5px;
-    border: 3px solid #5ECE7B;
+    margin-left: 5px;
+    border: 4px solid #5ECE7B;
 }
 
 .color_button_second{
     height: 100%;
     width: 47.5px;
-    margin-left: 8px;
+    margin-left: 5px;
     border: 1px solid black;
 }
-
 
 .add_item{
    border: 1px solid black;
@@ -314,7 +313,7 @@
     }
 
     .item_name_header{
-        font-size: 1.2rem; /* 30px */
+        font-size: 1.6rem !important; /* 30px */
         line-height: 2.25rem; /* 36px */
         margin-right: 8px;
     }
@@ -332,8 +331,8 @@
         font-style: normal;
         font-weight: 600;
         line-height: 27px;
-        font-size: 1.3rem; /* 36px */
-        line-height: 2.5rem; /* 40px */
+        font-size: 1.3rem; 
+        line-height: 2.5rem; 
         align-items: center;
     }
 
@@ -352,8 +351,8 @@
     .size_button{
         width: 60.4px;
         border: 2px solid black;
-        font-size: 1.5rem; /* 24px */
-        line-height: 2rem; /* 32px */
+        font-size: 1.5rem; 
+        line-height: 2rem; 
     }
 
     .size_button_selected{
@@ -361,7 +360,7 @@
         color: white;
         border: 2px solid black;
         background-color: black;
-        font-size: 1.5rem; /* 24px */
+        font-size: 1.5rem; 
         line-height: 2rem;
     }
 
@@ -391,12 +390,13 @@
     .color_button_first{
         height: 100%;
         width: 30px;
+        margin-left: 5px;
     }
     
     .color_button_second{
         height: 100%;
         width: 30px;
-        margin-left: 8px;
+        margin-left: 5px;
     }
 
     .color_buttons{
@@ -439,8 +439,8 @@
     }
 
     .item_name_header{
-        font-size: 1.2rem; /* 30px */
-        line-height: 2.25rem; /* 36px */
+        font-size: 1.2rem; 
+        line-height: 2.25rem; 
         margin-right: 8px;
     }
 
@@ -458,8 +458,8 @@
         font-style: normal;
         font-weight: 600;
         line-height: 27px;
-        font-size: 1.3rem; /* 36px */
-        line-height: 2.5rem; /* 40px */
+        font-size: 1.3rem; 
+        line-height: 2.5rem; 
         align-items: center;
     }
 
@@ -478,8 +478,8 @@
     .size_button{
         width: 60.4px;
         border: 2px solid black;
-        font-size: 1.5rem; /* 24px */
-        line-height: 2rem; /* 32px */
+        font-size: 1.5rem; 
+        line-height: 2rem;
     }
 
     
@@ -488,7 +488,7 @@
         color: white;
         border: 2px solid black;
         background-color: black;
-        font-size: 1.5rem; /* 24px */
+        font-size: 1.5rem; 
         line-height: 2rem;
     }
 
@@ -519,12 +519,13 @@
     .color_button_first{
         height: 100%;
         width: 30px;
+        margin-left: 5px;
     }
     
     .color_button_second{
         height: 100%;
         width: 30px;
-        margin-left: 8px;
+        margin-left: 5px;
     }
     
     .color_buttons{
@@ -643,12 +644,13 @@
     .color_button_first{
         height: 100%;
         width: 30px;
+        margin-left: 5px;
     }
     
     .color_button_second{
         height: 100%;
         width: 30px;
-        margin-left: 8px;
+        margin-left: 5px;
     }
     
     .color_buttons{
@@ -862,12 +864,13 @@
     .color_button_first{
         height: 100%;
         width: 30px;
+        margin-left: 5px;
     }
     
     .color_button_second{
         height: 100%;
         width: 30px;
-        margin-left: 8px;
+        margin-left: 5px;
     }
 }
 
@@ -898,7 +901,7 @@
     }
 
     .item_name_header{
-        font-size: 1.2rem; /* 30px */
+        font-size: 1.6rem; /* 30px */
         line-height: 2.25rem; /* 36px */
         margin-right: 8px;
     }
@@ -989,12 +992,13 @@
     .color_button_first{
         height: 100%;
         width: 30px;
+        margin-left: 5px;
     }
     
     .color_button_second{
         height: 100%;
         width: 30px;
-        margin-left: 8px;
+        margin-left: 5px;
     }
 }
 
@@ -1021,7 +1025,7 @@
     }
 
     .item_name_header{
-        font-size: 1.5rem; /* 24px */
+        font-size: 1.6rem; /* 24px */
         line-height: 2rem; /* 32px */
     }
 
@@ -1092,12 +1096,13 @@
     .color_button_first{
         height: 25.5px;
         width: 25.5px;
+        margin-left: 5px;
     }
     
     .color_button_second{
         height: 25.5px;
         width: 25.5px;
-        margin-left: 8px;
+        margin-left: 5px;
     }
 
     .child_container{
