--- a/Test-Task/my_app/src/components/Navbar/Navbar.module.css
+++ b/Test-Task/my_app/src/components/Navbar/Navbar.module.css
@@ -103,7 +103,10 @@
 
 
 .bascket_icon{
-   font-size: 35px;
+    display: flex;
+    justify-content: center;
+    height: 40%;
+    width: 40%;
 }
 
 .selection_container{
@@ -131,11 +134,13 @@
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 .currency_symbol{
     width: 70%;
-    font-size: 18px;
+    height: 70%;
+    font-size: 30px;
 }
 
 
@@ -225,7 +230,6 @@
 
 .items_quantity_cart_icon{
     top: -3px;
-    right: -5px;
     width: 13px;
     height: 13px;
     color: #FFFFFF;
@@ -236,6 +240,7 @@
     align-items: center;
     border-radius: 100%;
     justify-content: center;
+    transform: translate(10px, 0px);
 }
 
 .menu_toggler_container{
@@ -312,6 +317,13 @@
     filter: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
 }
 
+.ctgrs_sm{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 
 .menu_icon{
     margin: 0;
@@ -361,7 +373,8 @@
     }
 
     .currency_symbol{
-        font-size: 20px;
+        width: 40%;
+        font-size: 30px;
     }
 }
 
@@ -409,7 +422,8 @@
     }
 
     .currency_symbol{
-        font-size: 20px;
+        width: 40%;
+        font-size: 30px;
     }
 }
 
