--- a/Test-Task/my_app/src/components/Products/Products.module.css
+++ b/Test-Task/my_app/src/components/Products/Products.module.css
@@ -25,13 +25,23 @@
 
 .main{
     width: 100%;
+    min-height: 550px;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0.5rem;
 }
 
+.empty_list{
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .product_main_container{
+    position: relative;
     width: 100%;
     height: 100%;
     display: grid;
