--- a/Test-Task/my_app/src/components/Products/Toggle/Toggle.module.css
+++ b/Test-Task/my_app/src/components/Products/Toggle/Toggle.module.css
@@ -220,6 +220,8 @@
 
 
 .toggle_quantity_title_bottom{
+    display: flex;
+    align-items: center;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
